...
    'Analise de qualidade e pasteurizacao do leite no banco de leite.';
const String _dDistribuicao =
    'Leite pasteurizado distribuido a bebes prematuros e internados.';

final List<Doacao> doacoesMock = [
  Doacao(
    id: 'DOA-2026-014',
    titulo: 'Doacao de agosto',
    dataInicio: DateTime(2026, 8, 2),
    etapas: [
      EtapaDoacao(
        titulo: 'Cadastro e Triagem',
        descricao: _dTriagem,
...
